--- a/starter/app/src/main/res/layout/content_main.xml
+++ b/starter/app/src/main/res/layout/content_main.xml
@@ -29,6 +29,7 @@
         app:srcCompat="@drawable/download_cloud_solid" />
 
     <RadioGroup
+        android:id="@+id/group_download"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_32dp"
