--- a/starter/app/src/main/res/values/colors.xml
+++ b/starter/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#F9A825</color>
     <color name="white">#FFFFFF</color>
     <color name="color_purple">#A86AFF</color>
+    <color name="color_fail">#E91E63</color>
 </resources>
